# pong

./: CMakeLists.txt  Dependencies.cmake  README.md
App/: CMakeLists.txt
App/src/: main.cpp
App/src/Shaders/: fragmentShader.shader  vertexShader.shader
Core/: CMakeLists.txt
Core/include/: Application.h  Shader.h
Core/src/: Application.cpp  Shader.cpp
Pong/: Pong.sln
Pong/Dependencies/GLFW/libs/: glfw3.lib
Pong/Dependencies/include/glad/: glad.h
Pong/Pong/: Pong.vcxproj  Pong.vcxproj.filters
Pong/Pong/include/: Application.h
Pong/Pong/src/: Application.cpp
